Feature: update client info
